<resources>
    <string name="app_name">고놈알람</string>
    <string name="signin_google">Google login</string>
    <string name="signin_naver">Naver login</string>
    <string name="signin_kakao">Kakao login</string>

    <string name="string_single">my alarms</string>
    <string name="string_share">shared alarms</string>
    <string name="string_song">songs</string>
    <string name="string_setting">setting</string>

    <string name="project_name">고놈 Project</string>

    <string name="time_setting">시간 설정</string>
    <string name="alarm_repeat">반복</string>
    <string name="alarm_content">알람 내용</string>
    <string name="alarm_content_hint">무슨 일로 일어나시나요?</string>
    <string name="to_kakao_friends">카카오톡 불러오기</string>

</resources>