<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/login_activity_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/login_activity_logo_image"
        android:layout_centerHorizontal="true"
        android:layout_width="400dp"
        android:layout_height="160dp"
        android:layout_marginTop="320dp"
        android:src="@drawable/logo_character"
        />
    <LinearLayout
        android:id="@+id/login_activity_offline_background"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp">

        <ImageView
            android:id="@+id/login_activity_offline_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/btn_play"
            android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@+id/login_activity_offline_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:visibility="invisible"
            android:id="@+id/login_activity_google_login_button"
            app:backgroundTint="@null"
            android:textColor="@color/colorWhite"
            android:text="@string/signin_google"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_signin_google"/>
        <Button
            android:visibility="invisible"
            android:id="@+id/login_activity_naver_login_button"
            app:backgroundTint="@null"
            android:textColor="@color/colorWhite"
            android:text="@string/signin_naver"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_signin_naver"/>
        <Button
            android:visibility="invisible"
            android:id="@+id/login_activity_kakao_login_button"
            app:backgroundTint="@null"
            android:textColor="@color/black"
            android:text="@string/signin_kakao"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_signin_kakao"/>
    </LinearLayout>
</RelativeLayout>