<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAlarmActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addalarm_activity_above_toolbar"
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mainlogo_changeded"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/addalarm_activity_toolbar_division"
        android:background="@color/colorDivision"
        android:layout_below="@+id/addalarm_activity_above_toolbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/time_setting"
        android:textSize="20sp"
        android:layout_below="@id/addalarm_activity_toolbar_division"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>
    <TimePicker
        android:timePickerMode="spinner"
        android:id="@+id/addalarm_time_picker"
        android:layout_below="@id/addalarm_activity_toolbar_division"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:amPmBackgroundColor="#3CCA75"
        android:numbersSelectorColor="#3CCA75"
        android:theme="@style/DefaultNumberPickerTheme" />
    <LinearLayout
        android:id="@+id/addalarm_activity_timepicker_ivision"
        android:background="@color/colorDivision"
        android:layout_below="@id/addalarm_time_picker"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/alarm_repeat"
        android:textSize="20sp"
        android:layout_below="@+id/addalarm_activity_timepicker_ivision"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"/>
    <LinearLayout
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/days_picker"
        android:layout_below="@id/addalarm_activity_timepicker_ivision"
        android:layout_width="match_parent"
        android:weightSum="40"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/days_picker_monday"
            android:src="@drawable/monday"
            android:scaleType="centerInside"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <ImageView
            android:id="@+id/days_picker_tuesday"
            android:src="@drawable/tuesday"
            android:scaleType="centerInside"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <ImageView
            android:id="@+id/days_picker_wednesday"
            android:src="@drawable/wednesday"
            android:scaleType="centerInside"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <ImageView
            android:id="@+id/days_picker_thursday"
            android:src="@drawable/thursday"
            android:scaleType="centerInside"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <ImageView
            android:id="@+id/days_picker_friday"
            android:src="@drawable/friday"
            android:scaleType="centerInside"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <ImageView
            android:id="@+id/days_picker_saturday"
            android:src="@drawable/saturday"
            android:scaleType="centerInside"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <ImageView
            android:id="@+id/days_picker_sunday"
            android:src="@drawable/sunday"
            android:scaleType="centerInside"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addalarm_activity_days_division"
        android:orientation="horizontal"
        android:background="@color/colorDivision"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/days_picker"
        android:layout_marginTop="20dp"/>


    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/alarm_content"
        android:textSize="20sp"
        android:layout_below="@+id/addalarm_activity_days_division"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addalarm_activity_layout_alarm_title"
        android:layout_below="@+id/addalarm_activity_days_division"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <EditText
            android:singleLine="true"
            android:maxLength="10"
            android:id="@+id/addalarm_activity_alarm_title"
            android:text=""
            android:hint="@string/alarm_content_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/alarm_content_hint"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/addalarm_activity_title_division"
        android:orientation="horizontal"
        android:background="@color/colorDivision"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/addalarm_activity_layout_alarm_title"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/addalarm_activity_kakao_friends_button"
        android:layout_below="@id/addalarm_activity_title_division"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text=""
        android:gravity="center"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="#fef01b"/>
    <ImageView
        android:id="@+id/addalarm_activity_complete_addalarm_btn"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:elevation="60dp"
        android:scaleType="centerInside"
        android:src="@drawable/plus_button" />
</RelativeLayout>